--- a/src/app/components/logout/logout.component.html
+++ b/src/app/components/logout/logout.component.html
@@ -1,3 +1,6 @@
-<!-- BOTON DE LOGOUT QUE VA A LLAMAR A UN MODAL O A OTRA PAGINA IDK -->
+<!--  -->
+<button class="btn btn-primary" type="button" (click)="logOut()">
+    <!-- &lt; Cerrar Sesión &gt; -->
+   <h3> <i class="fa-solid fa-person-walking-arrow-right"></i> </h3>
+</button>
 
-<button class="btn btn-primary" type="button">Cerrar Sesión</button>
