--- a/src/app/modals/editjob/editjob.component.html
+++ b/src/app/modals/editjob/editjob.component.html
@@ -1,5 +1,5 @@
 <div class="modal" tabindex="-1" id="editjob">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <!-- header -->
       <div class="modal-header">
@@ -155,7 +155,7 @@
           >
             cerrar
           </button>
-          <input
+          <button
             type="submit"
             class="btn btn-primary"
             value="guardar cambios"
@@ -166,7 +166,7 @@
               start?.hasError('required') ||
               end?.hasError('required')
             "
-          />
+          >guardar cambios</button>
         </div>
       </form>
     </div>
