--- a/src/app/modals/editprofile/editprofile.component.html
+++ b/src/app/modals/editprofile/editprofile.component.html
@@ -1,5 +1,5 @@
 <div class="modal" tabindex="-1" id="editprofile">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <!-- header -->
@@ -187,7 +187,7 @@
             >
               cerrar
             </button>
-            <input
+            <button
               type="submit"
               class="btn btn-primary"
               value="guardar cambios"
@@ -200,7 +200,7 @@
                 banner?.hasError('required') ||
                 license?.hasError('required')
               "
-            />
+            >guardar cambios</button>
           </div>
         </form>
       </div>
