--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,36 +1,34 @@
-.about-me{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-top: 10px;
-    
-  }
-  .section__subtitle--about{
-    height: .20em;
-    border-radius: 2em;
-    /* colored line */
-  
-  }
-  
-  .about-me__body{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  
-    padding-left: 2.5em;
-    padding-right: 2.5em;
-  
-  }
-  .about-me p{
-    word-wrap: break-word;    /* IMPORTANT */
-  padding: 1em;
-    font-size: 1em;
-    font-weight: 300;
-  }
-  .about-me .com-1{
-    display: flex;
-    position: absolute;
-    flex-direction: row-reverse;
-  
-  }
-  
+.about-me {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 10px;
+}
+.section__subtitle--about {
+  height: 0.2em;
+  border-radius: 2em;
+  /* colored line */
+}
+
+.about-me__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  padding-left: var(--pad);
+  padding-right: var(--pad);
+}
+.about-me p {
+  word-wrap: break-word;
+  padding-bottom: 1em;
+  font-size: 1em;
+  font-weight: 300;
+}
+
+.admin-btn {
+  display: flex;
+  flex-direction: row-reverse;
+}
+button {
+  max-width: 32px;
+}
