--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,26 +4,26 @@
   </h2>
   <div class="about-me__body">
     <!-- componente de about-me -->
-    <div class="col-11 p-1" *ngFor="let person of people">
-      <h3>
-        <p class="p-1">
-          {{ person.about }}
-        </p>
-      </h3>
-      <div class="col-1 admin-btn">
+    <div class="column" *ngFor="let person of people">
+      <div>
+        <h3>
+          <p class="about">
+            {{ person.about }}
+          </p>
+        </h3>
+      </div>
+      <div class="admin-btn" *ngIf="isLogged">
         <button
           type="button"
           class="btn edit-btn btn-primary"
           data-bs-toggle="modal"
-          data-bs-target="#editprofile" 
+          data-bs-target="#editprofile"
           (click)="viewPerson(person.id)"
         >
-          <i class="fa-solid fa-wand-magic-sparkles"></i>
+          <i class="fa-solid fa-pencil"></i>
         </button>
       </div>
     </div>
-
-    
   </div>
 
   <div class="about-me__footer">
