--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,67 +1,63 @@
 /* completeeeeeeeeeee */
 
-.footer{
+.footer {
   color: var(--clr-light);
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
-.license{
- flex-grow: 1;
-
+.license {
+  flex-grow: 1;
 }
-p{
+p {
   font-size: 0.7rem;
   line-height: normal;
   padding-top: 3%;
 }
 
-.btn a{
-    text-decoration: none;
-    color: var(--clr-light)
-
+.btn a {
+  text-decoration: none;
+  color: var(--clr-light);
 }
 
-.btn i{
-    display: flex;
-
+.btn i {
+  display: flex;
 }
 
-.license{
-    display: flex;
-    justify-content: center;
-  }
+.license {
+  display: flex;
+  justify-content: center;
+}
 
-a{
-    text-decoration: none;
-    border-radius: 2rem; /* alt  4px */
-     padding: 4px;
-    
-    display: inline-flex;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    text-align: center;
-    border: none;
-    background-color: var(--clr-accent);
-    color: var(--clr-light);
-    box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+a {
+  text-decoration: none;
+  border-radius: 2rem; /* alt  4px */
+  padding: 4px;
+  width: 29px;
+  display: inline-flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  text-align: center;
+  border: none;
+  background-color: var(--clr-accent);
+  color: var(--clr-light);
+  box-shadow: 0 8px 24px 0 rgba(255, 235, 167, 0.2);
 }
 a:hover,
 a:active,
-a:focus{  
+a:focus {
   background-color: var(--clr-light);
-  color:var(--clr-accent);
-  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+  color: var(--clr-accent);
+  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
 }
 
-
-.a i:hover{  
+.a i:hover {
   background-color: var(--clr-light);
-  color:var(--clr-accent);
+  color: var(--clr-accent);
 }
