--- a/src/app/components/introduction/introduction.component.html
+++ b/src/app/components/introduction/introduction.component.html
@@ -1,7 +1,11 @@
-<section *ngFor="let person of people" class="introduction" id="home" [ngStyle]="{'background-image': ' url(' + person.banner + ')'}">
-
+<section
+  *ngFor="let person of people"
+  class="introduction"
+  id="home"
+  [ngStyle]="{ 'background-image': ' url(' + person.banner + ')' }"
+>
   <!-- left side -->
-  <div class="left" >
+  <div class="left">
     <h1 class="section__title section__title--intro center">Hola, me llamo</h1>
     <h1 class="section__title section__title--intro center">
       <strong>{{ person.fullname }}</strong>
@@ -15,10 +19,7 @@
   <!-- right side -->
   <div class="right">
     <img [src]="person.pfp" alt="pfp" class="intro__img" />
-    <div class="right-bottom">
-      <h1>
-        <i class="fa-solid fa-laptop-code icon-body introduction__icon"></i>
-      </h1>
+    <div class="right-bottom" *ngIf="isLogged">
       <!-- modal -->
       <div class="col-1 admin-btn">
         <!-- edit -modal trigger button -->
@@ -29,7 +30,7 @@
           data-bs-target="#editprofile"
           (click)="viewPerson(person.id)"
         >
-          <i class="fa-solid fa-wand-magic-sparkles"></i>
+          <i class="fa-solid fa-pencil"></i>
         </button>
       </div>
       <!-- ------- -->
@@ -37,7 +38,5 @@
 
     <!-- ICON -->
   </div>
-
 </section>
-
 <app-editprofile></app-editprofile>
