--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,11 @@
-<!-- BOTON DE LOGIN QUE VA A LLAMAR A UN MODAL O PAGINA CON TODO EL CODIGO DE ABAJO -->
-
+<!-- login button redirects to route "loginmodal" -->
 <button
+  *ngIf="!isLogged"
   class="btn btn-primary"
   type="button"
   [routerLink]="['/loginmodal']"
   routerLinkActive="router-link-active"
 >
-  <!-- agregar un router link hacer la ruta del formulario del login -->
-  <!-- change toggle modal to ...????????? -->
-  Iniciar Sesión
+&lt; Iniciar Sesión &gt;
 </button>
+
