--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -1,55 +1,40 @@
-.skills{
-
-    padding: 1em;
-    margin: 2%;
-    display: flex;
-    flex-grow: 1;
-    flex-wrap: wrap;
-    flex-direction: grid;
-    justify-content: center;
-    transition: 2s;
-
-    
-  }
-  .skill{
-
-    padding: 1em;
-    transition: 2s; 
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    max-width: 250px;
-    justify-content: center;
-
-  }
-
-  .skills h2 {
-    padding: 4%;
-  }
-  .skills h3,
-  .skills p{
-    padding: 2%;
-  
-  }
-  .skill:hover{
-    transform: scale(1.3);
-    box-shadow: none;
-
-  }
-  .project h2 {
-    padding: 4%;
-  }
-  .project h3,
-  .project p{
-    padding: 2%;
-  
-  }
-  /* review */
-  .button-icon{
-    display: flex;
-    flex-grow: 1;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-  
+.skills {
+  padding: 1em;
+  margin: 1%;
+  display: flex;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  flex-direction: grid;
+  justify-content: center;
+  transition: 2s;
+}
+.skill {
+  padding: 0.5em;
+  transition: 2s;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  max-width: var(--maxwidth);
+  justify-content: center;
+}
+.skills h2 {
+  padding: 4%;
+}
+.skills h3,
+.skills p {
+  padding: 2%;
+}
+.skill:hover {
+  transform: scale(1.3);
+  box-shadow: none;
+}
+.button-icon {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.admin-btn {
+  display: flex;
+  justify-content: center;
+}
