--- a/src/app/modals/addproject/addproject.component.html
+++ b/src/app/modals/addproject/addproject.component.html
@@ -1,5 +1,5 @@
 <div class="modal" tabindex="-1" id="addproject">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <!-- header -->
       <div class="modal-header">
@@ -140,7 +140,7 @@
           >
             cerrar
           </button>
-          <input
+          <button
             [disabled]="
               Url?.hasError('required') ||
               Title?.hasError('required') ||
@@ -152,7 +152,7 @@
             class="btn btn-primary"
             value="guardar cambios"
             (click)="refresh()"
-          />
+          >guardar cambios</button> 
         </div>
       </form>
     </div>
