--- a/src/app/modals/delete/delete.component.html
+++ b/src/app/modals/delete/delete.component.html
@@ -1,8 +1,7 @@
-
 <!-- should this be a form?? -->
 
 <div class="modal" tabindex="-1" id="delete">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title">&lt; eliminar &gt;</h3>
@@ -15,9 +14,10 @@
       </div>
       <div class="modal-body">&lt; datos actualizados &gt;</div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" (click)="refresh()" >&lt; recargar &gt;</button>
+        <button type="submit" class="btn btn-primary" (click)="refresh()">
+          &lt; recargar &gt;
+        </button>
       </div>
     </div>
   </div>
 </div>
-
