--- a/src/app/modals/editproject/editproject.component.html
+++ b/src/app/modals/editproject/editproject.component.html
@@ -1,5 +1,5 @@
 <div class="modal" tabindex="-1" id="editproject">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <!-- header -->
       <div class="modal-header">
@@ -158,19 +158,19 @@
           >
             cerrar
           </button>
-          <input
+          <button
             type="submit"
             class="btn btn-primary"
             value="guardar cambios"
             (click)="refresh()"
             [disabled]="
-            url?.hasError('required') ||
-            title?.hasError('required') ||
-            start?.hasError('required') ||
-            end?.hasError('required') ||
-            description?.hasError('required')
-          "
-          />
+              url?.hasError('required') ||
+              title?.hasError('required') ||
+              start?.hasError('required') ||
+              end?.hasError('required') ||
+              description?.hasError('required')
+            "
+          >guardar cambios</button>
         </div>
       </form>
     </div>
