modal effect(fade)

--- a/src/app/modals/addproject/addproject.component.html
+++ b/src/app/modals/addproject/addproject.component.html
@@ -1,4 +1,4 @@
-<div class="modal" tabindex="-1" id="addproject">
+<div class="modal fade" tabindex="-1" id="addproject">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <!-- header -->
@@ -152,7 +152,9 @@
             class="btn btn-primary"
             value="guardar cambios"
             (click)="refresh()"
-          >guardar cambios</button> 
+          >
+            guardar cambios
+          </button>
         </div>
       </form>
     </div>
