--- a/src/app/modals/addskill/addskill.component.html
+++ b/src/app/modals/addskill/addskill.component.html
@@ -1,4 +1,4 @@
-<div class="modal" tabindex="-1" id="addskill">
+<div class="modal fade" tabindex="-1" id="addskill">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <!-- header -->
@@ -83,7 +83,9 @@
               Percentage?.hasError('max')
             "
             (click)="refresh()"
-          >guardar cambios</button>
+          >
+            guardar cambios
+          </button>
         </div>
       </form>
     </div>
