--- a/src/app/modals/delete/delete.component.html
+++ b/src/app/modals/delete/delete.component.html
@@ -1,6 +1,6 @@
 <!-- should this be a form?? -->
 
-<div class="modal" tabindex="-1" id="delete">
+<div class="modal fade" tabindex="-1" id="delete">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
