--- a/src/app/modals/editjob/editjob.component.html
+++ b/src/app/modals/editjob/editjob.component.html
@@ -1,4 +1,4 @@
-<div class="modal" tabindex="-1" id="editjob">
+<div class="modal fade" tabindex="-1" id="editjob">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <!-- header -->
@@ -166,7 +166,9 @@
               start?.hasError('required') ||
               end?.hasError('required')
             "
-          >guardar cambios</button>
+          >
+            guardar cambios
+          </button>
         </div>
       </form>
     </div>
