--- a/src/app/modals/editprofile/editprofile.component.html
+++ b/src/app/modals/editprofile/editprofile.component.html
@@ -1,4 +1,4 @@
-<div class="modal" tabindex="-1" id="editprofile">
+<div class="modal fade" tabindex="-1" id="editprofile">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
@@ -200,7 +200,9 @@
                 banner?.hasError('required') ||
                 license?.hasError('required')
               "
-            >guardar cambios</button>
+            >
+              guardar cambios
+            </button>
           </div>
         </form>
       </div>
