--- a/src/app/modals/editsocial/editsocial.component.html
+++ b/src/app/modals/editsocial/editsocial.component.html
@@ -1,4 +1,4 @@
-<div class="modal" tabindex="-1" id="editsocial">
+<div class="modal fade" tabindex="-1" id="editsocial">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <!-- header -->
