--- a/src/app/modals/addcourse/addcourse.component.html
+++ b/src/app/modals/addcourse/addcourse.component.html
@@ -1,6 +1,6 @@
 <!-- I used reactive forms for the add feature -->
 <!-- whereas on the edit feature I used template driven forms because the use of formGroups and ngModel in the same tag is deprecated in my angular version -->
-<div class="modal" tabindex="-1" id="addcourse">
+<div class="modal fade" tabindex="-1" id="addcourse">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <!-- header -->
@@ -129,7 +129,9 @@
               End?.hasError('required')
             "
             (click)="refresh()"
-          >guardar cambios</button>
+          >
+            guardar cambios
+          </button>
         </div>
       </form>
     </div>
