--- a/src/app/modals/addjob/addjob.component.html
+++ b/src/app/modals/addjob/addjob.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
-  <div class="modal" tabindex="-1" id="addjob">
+  <div class="modal fade" tabindex="-1" id="addjob">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <!-- header -->
@@ -151,7 +151,9 @@
               class="btn btn-primary"
               value="guardar cambios"
               (click)="refresh()"
-            >guardar cambios</button>
+            >
+              guardar cambios
+            </button>
           </div>
         </form>
       </div>
