--- a/src/app/modals/editproject/editproject.component.html
+++ b/src/app/modals/editproject/editproject.component.html
@@ -1,4 +1,4 @@
-<div class="modal" tabindex="-1" id="editproject">
+<div class="modal fade" tabindex="-1" id="editproject">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <!-- header -->
@@ -170,7 +170,9 @@
               end?.hasError('required') ||
               description?.hasError('required')
             "
-          >guardar cambios</button>
+          >
+            guardar cambios
+          </button>
         </div>
       </form>
     </div>
