--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
        
     </h3>
   </div>
-  <div>
+  <div class="back-to-top">
     <h3>
       <a href="#navigation">
         <i class="fa-solid fa-arrow-up"> </i>
