--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -9,7 +9,7 @@
   flex-grow: 1;
 }
 p {
-  font-size: 0.7rem;
+  font-size: 0.5rem;
   line-height: normal;
   padding-top: 3%;
 }
@@ -60,4 +60,7 @@ a:focus {
 .a i:hover {
   background-color: var(--clr-light);
   color: var(--clr-accent);
+}
+.back-to-top {
+  margin: 0.5em;
 }
