--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -59,6 +59,13 @@
     </div>
     <!-- fin -->
   </div>
+  <div class="back-to-top">
+    <h3>
+      <a href="#navigation">
+        <i class="fa-solid fa-chevron-up"></i>
+      </a>
+    </h3>
+  </div>
 
   <div class="my-education__footer">
     <h2>&lt; / <i class="fa-solid fa-user-graduate icon-body"></i> &gt;</h2>
