--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -56,6 +56,13 @@
 
       <!-- modal -->
     </div>
+    <div class="back-to-top">
+      <h3>
+        <a href="#navigation">
+          <i class="fa-solid fa-chevron-up"></i>
+        </a>
+      </h3>
+    </div>
     <!-- ----------------- -->
   </div>
   <div class="my-experience__footer">
