--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -63,6 +63,13 @@
     </div>
     <!-- end project -->
   </div>
+  <div class="back-to-top">
+    <h3>
+      <a href="#navigation">
+        <i class="fa-solid fa-chevron-up"></i>
+      </a>
+    </h3>
+  </div>
 
   <div class="my-projects__footer">
     <h2>&lt; / <i class="fa-solid fa-list-check icon-body"></i> &gt;</h2>
