--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -64,6 +64,13 @@
     </div>
     <!-- end skill 1 -->
   </div>
+  <div class="back-to-top">
+    <h3>
+      <a href="#navigation">
+        <i class="fa-solid fa-chevron-up"></i>
+      </a>
+    </h3>
+  </div>
 
   <div class="my-skills__footer">
     <h2>&lt; / <i class="fa-solid fa-shapes icon-body"></i> &gt;</h2>
