--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -55,6 +55,7 @@
         &lt; {{ project.title }} &gt;
 
         <p>{{ project.description }}</p>
+        <p><i>&lt; link al proyecto en la carpeta &gt;</i></p>
         <p class="project__date">
           {{ project.start | date : "dd-MM-yyy" }} /
           {{ project.end | date : "dd-MM-yyy" }}
