--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,8 @@
   --clr-light: #fff;
   --clr-dark: #1f2029;
   --clr-accent: #009188;
-
+  
+/* font size */
   --fs-h1: 2.25rem;
   --fs-h2: 1.75rem;
   --fs-h3: 1rem;
@@ -37,10 +38,6 @@
 /* Global variables that change depending on the screen size */
 @media (min-width: 965px) {
   :root {
-    /* --fs-h1: 3.5rem;
-    --fs-h2:2.75rem;
-    --fs-h3:1.5rem;
-    --fs-body:1.25rem; */
 
     /* font size */
     --fs-h1: 3rem;
